AC_PREREQ([2.59])

AC_INIT([kstest], [2.0.0])

AM_INIT_AUTOMAKE([foreign])

AC_CONFIG_MACRO_DIR([m4])

dnl enable libtool
LT_INIT
AC_PROG_CXX

AC_PROG_INSTALL

dnl set the default destination directory
AC_PREFIX_DEFAULT([/usr/local])

AC_OUTPUT([Makefile kstest/Makefile examples/Makefile kstest.pc])
