noinst_LTLIBRARIES = libHisto.la

libHisto_la_SOURCES = mainPanel.c mainMenu.c plotWindows.c dragPlot.c \
	commPanel.c preferences.c communications.c ntuplePanel.c \
	plotMenus.c axisSettings.c help.c controls.c  MarginSlider.c \
	configFile.c multPlot.c variablePanel.c interpret.c parse.y \
        ColorScale.c colorScaleDialog.c drawOver.c gsComm.c \
        defaultColorScale.c auxWindows.c \
        auxWindows.h  controls.h   histoMainProgram.h  multPlot.h \
        axisSettings.h defaultColorScale.h  histoP.h  ntuplePanel.h \
        colorScaleDialog.h  dragPlot.h  interpret.h  parse.h \
        ColorScale.h  drawOver.h  mainMenu.h   plotMenus.h \
        commPanel.h  globalgc.h  mainPanel.h  plotWindows.h \
        communications.h  gsComm.h  MarginSlider.h  preferences.h \
        configFile.h  help.h  MarginSliderP.h  variablePanel.h

INCLUDES = -I. $(DEPS_CFLAGS) $(MOTIF_CFLAGS) $(X11_CFLAGS)

EXTRA_DIST = 2DHelp.xbm 2DHistHelp.xbm 3DHelp.xbm
