noinst_LTLIBRARIES = libPlotW.la

libPlotW_la_SOURCES = Scat.c XY.c H1D.c Curves.c Cell.c 2DHist.c \
       3DScat.c 3DPara.c 3DRot.c 3DRotCube.c uniLab.c uniLabLog.c axes.c \
       axes_ps.c segment_name.c 2DGeom.c 3DGeom.c geometry.c fltRange.c \
       imaggen.c readhist.c labels.c psgen.c apsgen.c 2DHistZLabels.c \
       adaptHist.c aimaggen.c aHistRead.c uniLab_2DHInt.c drawAxes.c \
       2DHistCalls.c dragAxes.c XYDialogs.c XYTransform.c enableArrows.c \
       2DGeom.h  3DRot.h  CellP.h     histo.h  uniLab.h  enableArrows.h \
       2DHistDefs.h     3DScat.h     Curves.h    imaggen.h uniLabLog.h \
       2DHist.h         3DScatP.h    CurvesP.h   labels.h XYDialogs.h \
       2DHistMalloc.h   adaptHist.h  dragAxes.h  psgen.h XY.h \
       2DHistP.h  aHistRead.h  drawAxes.h  readhist.h   XYP.h \
       2DHistZLabels.h  aimaggen.h   fltRange.h  Scat.h  XYTransform.h \
       3DGeom.h         apsgen.h     geometry.h  ScatP.h    obsolete.h \
       3DPara.h         axes.h       H1D.h       segment_name.h \
       3DRotCube.h      Cell.h       H1DP.h      uniLab_2DHInt.h

INCLUDES = -I. $(DEPS_CFLAGS) $(MOTIF_CFLAGS) $(X11_CFLAGS)

EXTRA_DIST = 2DHelp.xbm 2DHistHelp.xbm 3DHelp.xbm
