noinst_LTLIBRARIES = libHistoUtil.la

libHistoUtil_la_SOURCES = DialogF.c stringUtils.c getfiles.c printUtils.c \
    psUtils.c misc.c fileUtils.c help.c prefFile.c fontsel.c managedList.c \
    DialogF.h     fontsel.h   managedList.h  printUtils.h \
    fileUtils.h   getfiles.h  misc.h         psUtils.h \
    floatPoint.h  help.h      prefFile.h     stringUtils.h

INCLUDES = -I. $(DEPS_CFLAGS) $(MOTIF_CFLAGS) $(X11_CFLAGS)
