AM_CPPFLAGS = -I@top_srcdir@/

includedir = ${prefix}/include/npstat/emsunfold

include_HEADERS = AbsSparseUnfoldND.hh \
    AbsSparseUnfoldND.icc \
    AbsSparseUnfoldingFilterND.hh \
    EigenParameters.hh \
    EigenParameters.icc \
    pruneCovariance.hh \
    pruneCovariance.icc \
    SmoothedEMSparseUnfoldND.hh \
    SmoothedEMSparseUnfoldND.icc \
    SparseUnfoldingBandwidthScannerND.hh \
    SparseUnfoldingBandwidthScannerND.icc \
    trlan77.h \
    trlanEigensystem.hh \
    trlanEigensystem.icc

EXTRA_DIST = 00README.txt emsunfold_doxy.hh
