AM_CPPFLAGS = -I@top_srcdir@/

includedir = ${prefix}/include/npstat/interfaces

include_HEADERS = fitCompositeJohnson.hh \
    fitCompositeJohnson.icc	\
    MinuitDensityFitFcn1D.hh \
    minuitFitJohnsonCurves.hh \
    minuitFitJohnsonCurves.icc \
    MinuitLocalLogisticFcn.hh \
    minuitLocalQuantileRegression1D.hh \
    minuitLocalQuantileRegression1D.icc \
    minuitLocalRegression.hh \
    minuitLocalRegression.icc \
    MinuitLOrPEBgCVFcn1D.hh \
    MinuitSemiparametricFitFcn1D.hh \
    MinuitSemiparametricFitUtils.hh \
    MinuitQuantileRegression1DFcn.hh \
    minuitQuantileRegression.hh \
    minuitQuantileRegression.icc \
    MinuitQuantileRegressionNDFcn.hh \
    MinuitUnbinnedFitFcn1D.hh \
    ScalableDensityConstructor1D.hh \
    weightedLocalQuantileRegression1D.hh \
    weightedLocalQuantileRegression1D.icc

EXTRA_DIST = 00README.txt npsi_doxy.hh
