includedir = ${prefix}/include/npstat/wrap

include_HEADERS = arrayNDFromNumpy.hh \
    arrayNDToNumpy.hh \
    histoBars.hh \
    histoOutline1D.hh \
    ntupleColumnToNumpy.hh \
    NumpyTypecode.hh \
    OneShotReadBuf.hh \
    pickle_item.hh \
    PyClassId.hh \
    PythonRecord.hh \
    PythonReference.hh \
    scanDensity1D.hh \
    StorableNone.hh \
    stringArchiveToBinary.hh \
    templateParameters.hh
